Misc. code cleanup (#63)